Negative lengths are not allowed for outline and border -width.

BUG: 256755
FIXED-IN: 4.13.3