khtml/css/cssparser.cpp
@@ -875,7 +875,7 @@ bool CSSParser::parseValue( int propId, bool important )
         if (id == CSS_VAL_THIN || id == CSS_VAL_MEDIUM || id == CSS_VAL_THICK)
             valid_primitive = true;
         else
-            valid_primitive = ( validUnit( value, FLength, strict ) );
+            valid_primitive = ( validUnit( value, FLength|FNonNeg, strict ) );
         break;
 
     case CSS_PROP_LETTER_SPACING:       // normal | <length> | inherit
